--- a/.github/workflows/test-action.yaml
+++ b/.github/workflows/test-action.yaml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Git main # Name of the unit command
-        uses: actions/checkout @v3 # Version varies from time to time, so check in the document
+        uses: actions/checkout@v3 # Corrected: no space before the version
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
