--- a/.github/workflows/test-action.yaml
+++ b/.github/workflows/test-action.yaml
@@ -1,17 +1,19 @@
-name: Test Action
+name: test action # 테스트 관리시 스크립트에 붙는 이름, 어떻게 작성되어도 무방함
 
 on:
-  workflow_dispatch:
-  push:
-
+  workflow_dispatch: # 사용자가 실행했을때
+  push: # 푸시가 유발되었을때
+  #branches: master # master 브랜치에 푸시가 유발된 경우
+  #branches: ['master', 'develop'] # master, develop 브랜치에 푸시가 유발된 경우
+  # 작성을 안 하면 그냥 모든 브랜치를 타겟으로 잡음.
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Git main # Name of the unit command
-        uses: actions/checkout@v3 # Corrected: no space before the version
+      - name: Git Checkout # 단위 명령어의 이름
+        uses: actions/checkout@v3.0.2 # 버전이 그때그때 달라지므로 문서에서 확인
 
-      - name: Set up JDK 17
+      - name: set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: 17
